--- a/text.css
+++ b/text.css
@@ -8,15 +8,6 @@
     --p-nadnaslov-size: 10px;
     --sp-nadnaslov-size: 10px;
 
-    --h1-nadnaslov-size: 10px;
-    --h2-nadnaslov-size: 10px;
-    --h3-nadnaslov-size: 10px;
-    --h4-nadnaslov-size: 10px;
-    --h5-nadnaslov-size: 10px;
-    --h6-nadnaslov-size: 10px;
-    --p-nadnaslov-size: 10px;
-    --sp-nadnaslov-size: 10px;
-
     --h1-naslov-size: 10px;
     --h2-naslov-size: 10px;
     --h3-naslov-size: 10px;
@@ -25,6 +16,15 @@
     --h6-naslov-size: 10px;
     --p-naslov-size: 10px;
     --sp-naslov-size: 10px;
+
+    --h1-podnaslov-size: 10px;
+    --h2-podnaslov-size: 10px;
+    --h3-podnaslov-size: 10px;
+    --h4-podnaslov-size: 10px;
+    --h5-podnaslov-size: 10px;
+    --h6-podnaslov-size: 10px;
+    --p-podnaslov-size: 10px;
+    --sp-podnaslov-size: 10px;
 
     --h1-tekst-size: 10px;
     --h2-tekst-size: 10px;
