--- a/header.css
+++ b/header.css
@@ -23,12 +23,40 @@
     color: white;
 }
 
+.navbar-light .navbar-nav .nav-link.active {
+    color: #4d4d4f;
+}
+
 .nav-gray.nav-link {
     color: #939598;
+    border-radius: 20px;
+    font-size: 12px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    padding: 5px 15px;
 }
 
 nav.navbar {
     background: transparent !important; 
+}
+
+div#nav-products {
+    border-radius: 0 10px 10px;
+    box-shadow: 0px 2px 5px 1px #818185;
+    border: 0px;
+    margin-top:5px;
+}
+
+.white-dropdown {
+    border-radius: inherit;
+}
+
+.orange-dropdown {
+    border-radius: inherit;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+
+    box-shadow: -1px 0px 4px #939598; 
 }
 
 .dropdown-menu.show.flex-drop {
