--- a/header.css
+++ b/header.css
@@ -65,6 +65,7 @@ div.nav-products {
     word-wrap: break-word;
     padding-left: 0;
     padding-right: 0;
+    white-space: unset;
 }
 
 .orange-dropdown {
