--- a/mob-header/mob-header.css
+++ b/mob-header/mob-header.css
@@ -1,13 +1,14 @@
 .sidenav {
     height: 100%; 
     width: 0; 
+    width: 100%; /* TODO delete */
     position: fixed;
     z-index: 1; 
     top: 0;
     left: 0;
     background-color: white;   /* needs color any color */
     overflow-x: hidden; 
-    padding-top: 60px;
+    padding: 60px 16px 16px 16px;
     transition: 0.5s;
 }
 
@@ -76,4 +77,17 @@ button.sideBtn[data-bs-toggle][aria-expanded="false"] > .sideArrowDown {
 
 button.sideBtn[data-bs-toggle]:not(.collapsed)[aria-expanded="true"] > .sideArrowUp {
     display: block;
+}
+
+
+#mobHeader {
+    min-height: 100%;
+}
+
+.sidemin100 {
+    min-height: 100%;
+}
+
+.sideNavBotKeep {
+    flex: 1;
 }
