--- a/flex-row-overflow/style.css
+++ b/flex-row-overflow/style.css
@@ -14,6 +14,10 @@
 
 .grid-element > img {
     object-fit: contain;
+    -webkit-user-drag: none;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
 }
 
 .grid-element * {
