--- a/8/style.css
+++ b/8/style.css
@@ -13,10 +13,7 @@
 .pills-8 > button {
     text-align: inherit;
     /* padding: 0 1rem; */
-}
-
-.pills-8 > button > span {
-    /* padding: 0.5rem 0; */
+    margin: 0.25rem 0;
 }
 
 .img-a-8 {
