--- a/tabs/style.css
+++ b/tabs/style.css
@@ -48,6 +48,14 @@
     height: 6px;
 }
 
+.progress-25 > .progress-bar {
+    width: 0%;
+}
+
+.progress-25 > .start-transition {
+    width: 0% !important;
+}
+
 .v-center {
     display: flex;
     align-items: center;
