--- a/tabs/style.css
+++ b/tabs/style.css
@@ -45,11 +45,12 @@
 }
 
 .progress-25{
-    height: 6px;
+    height: 7px;
 }
 
 .progress-25 > .progress-bar {
     width: 0%;
+    border-radius: 0.25rem;
 }
 
 .progress-25 > .start-transition {
@@ -59,4 +60,9 @@
 .v-center {
     display: flex;
     align-items: center;
+}
+
+.tab-pane .row {
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
