--- a/22/style.css
+++ b/22/style.css
@@ -13,7 +13,7 @@
     scroll-snap-type: y mandatory;
 }
 
-.element-22  .section {
+.element-22 .section {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,14 +21,14 @@
 
     scroll-snap-align: start;
     height: 100vh;
-
 }
 
-.element-22  .section > .content-22 {
+.element-22 .section > .content-22 {
     height: 100%;
+    width: 100%;
 }
 
-#fullpage  .section > img {
+#fullpage .section  img {
     object-fit: cover;
     width: 100%;
     height: 100%;
